--- a/css/main.css
+++ b/css/main.css
@@ -15,47 +15,21 @@ header.admin_header .navbar .container .navbar-brand {
 header.admin_header .navbar .container .navbar-brand i {
   margin-right: 5px;
 }
+header.admin_header .navbar .container .navbar-toggler {
+  background: #fff;
+}
 header.admin_header .navbar .container .navbar-collapse {
-  display: flex;
-  justify-content: space-between;
+  justify-content: flex-end;
 }
-header.admin_header .navbar .container .navbar-collapse .nav_left {
+header.admin_header .navbar .container .navbar-collapse .navbar-nav .nav-link {
+  text-align: center;
+  color: #fff;
   margin-left: 20px;
-}
-header.admin_header .navbar .container .navbar-collapse .nav_left .nav-item {
-  margin-right: 30px;
   transform: scale(1);
-}
-header.admin_header .navbar .container .navbar-collapse .nav_left .nav-item .nav-link {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  color: #fff;
   transition: 0.3s ease-in-out;
 }
-header.admin_header .navbar .container .navbar-collapse .nav_left .nav-item .nav-link i {
-  font-size: 25px;
-}
-header.admin_header .navbar .container .navbar-collapse .nav_left .nav-item:hover .nav-link:hover {
-  transform: scale(1.2);
-}
-header.admin_header .navbar .container .navbar-collapse .nav_right .nav-item {
-  transform: scale(1);
-}
-header.admin_header .navbar .container .navbar-collapse .nav_right .nav-item .nav-link {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  color: #fff;
-  transition: 0.3s ease-in-out;
-}
-header.admin_header .navbar .container .navbar-collapse .nav_right .nav-item .nav-link i {
-  font-size: 25px;
-}
-header.admin_header .navbar .container .navbar-collapse .nav_right .nav-item:hover .nav-link:hover {
-  transform: scale(1.2);
+header.admin_header .navbar .container .navbar-collapse .navbar-nav .nav-link:hover {
+  transform: scale(1.3);
 }
 
 footer.admin_footer {
@@ -126,7 +100,6 @@ footer.admin_footer .footer_bottom .container p.text_bottom a {
 .modalPhone .modal-content {
   background-color: #fff;
   border-radius: 0;
-  height: 90vh;
 }
 .modalPhone .modal-content .modal-header .modal-title {
   margin: 0 auto;
@@ -136,6 +109,7 @@ footer.admin_footer .footer_bottom .container p.text_bottom a {
   background: #ffdde1;
   padding: 16px;
   border-radius: 5px;
+  height: auto;
 }
 .modalPhone .modal-content .modal-body form .form-group {
   padding-bottom: 10px;
@@ -148,6 +122,9 @@ footer.admin_footer .footer_bottom .container p.text_bottom a {
   border: none;
   padding: 0;
   background: none;
+}
+.modalPhone .modal-content .modal-body form .form-group .sp-thongbao {
+  color: red;
 }
 
 .homepage {
@@ -206,6 +183,33 @@ section.phone_mgmt .phone_header {
   color: #fff;
   border-radius: 20px 20px 0 0;
 }
+section.phone_mgmt .phone_header .btn_groups {
+  display: flex;
+  align-items: center;
+}
+section.phone_mgmt .phone_header .btn_groups .search {
+  margin-right: 15px;
+}
+section.phone_mgmt .phone_header .btn_groups .search .btnSearch {
+  color: #fff;
+  border-radius: 5px;
+}
+section.phone_mgmt .phone_header .btn_groups .search .btnSearch i {
+  margin: 0;
+}
+section.phone_mgmt .phone_header .btn_groups .filter {
+  margin-right: 15px;
+}
+section.phone_mgmt .phone_header .btn_groups .filter .dropdown-menu .dropdown-item:active {
+  background-color: #176B87;
+  color: #fff;
+}
+section.phone_mgmt .phone_header .btn_groups .btnAdd .btn_add {
+  width: 130px;
+}
+section.phone_mgmt .phone_header .btn_groups .btnAdd .btn_add:active {
+  background-color: #176B87;
+}
 section.phone_mgmt .phone_header button {
   background-color: #176B87;
   border: 1px solid #176B87;
@@ -216,4 +220,10 @@ section.phone_mgmt .phone_header button i {
 section.phone_mgmt .phone_table .table thead, section.phone_mgmt .phone_table .table tr, section.phone_mgmt .phone_table .table th {
   color: #313131;
   font-weight: bolder;
+}
+section.phone_mgmt .phone_table .table thead tr th:nth-child(6) {
+  width: 170px;
+}
+section.phone_mgmt .phone_table .table #tblDanhSachSP tr, section.phone_mgmt .phone_table .table #tblDanhSachSP td {
+  font-weight: lighter;
 }
