--- a/admin/view/admin.html
+++ b/admin/view/admin.html
@@ -226,7 +226,7 @@
                 </div>
                 <div class="modal-footer">
                     <button id="btnAdd" type="button" onclick="createProduct()" class="btn btn-warning">Add Phone</button>
-                    <button type="button" class="btn btn-primary" onclick="updateProduct()">Update</button>
+                    <button id="btnUpdate" type="button" class="btn btn-primary" style="display: none;" onclick="updateProduct()">Update</button>
                     <button type="button" class="btn btn-dark" aria-label="Close" onclick="resetForm()" data-bs-dismiss="modal">Close</button>
                 </div>
             </div>
