--- a/customer/view/customer.html
+++ b/customer/view/customer.html
@@ -53,7 +53,7 @@
                             <div><i class="fa fa-store"></i></div>
                             Admin
                         </a>
-                        <a class="nav-link" href="../../cart/view/cart.html">
+                        <a class="nav-link" href="../../cart/view/cart.html" target="_blank">
                             <div><i class="fa fa-shopping-cart"></i></div>
                             Cart
                         </a>
@@ -90,6 +90,7 @@
         </div>
       </div>
     </section>
+    
     <!-- Footer -->
     <footer class="admin_footer">
     <div class="footer_top">
