--- a/scss/Helpers/_variables.scss
+++ b/scss/Helpers/_variables.scss
@@ -20,6 +20,7 @@ $white-3: #fff;
 
 $black-1: rgba(0, 0,0,0.1); 
 $black-2: #313131; 
+$black-3: rgb(200, 200, 200); 
 
 $blue-1: #0a58ca;
 $blue-2: #242662;
@@ -28,9 +29,11 @@ $blue-3: #176B87;
 $purple-1: #562B5E; 
 $purple-2: #87315B;
 $purple-3: #60679B; 
+$purple-4: #d2c9ff;
 
 $yellow-1: #f3ce5e;
 
 $pink-1: #fda8cf;
 $pink-2: #ffdde1;
 $pink-3: #ee9ca7; 
+
