--- a/admin/view/admin.html
+++ b/admin/view/admin.html
@@ -59,7 +59,7 @@
                             <div><i class="fa fa-store"></i></div>
                             Store
                         </a>
-                        <a class="nav-link" href="../../cart/view/cart.html">
+                        <a class="nav-link" href="#">
                             <div><i class="fa fa-shopping-cart"></i></div>
                             Cart
                         </a>
