--- a/customer/view/customer.html
+++ b/customer/view/customer.html
@@ -59,7 +59,7 @@
                             <div><i class="fa fa-store"></i></div>
                             Admin
                         </a>
-                        <a class="nav-link" href="../../cart/view/cart.html" target="_blank">
+                        <a class="nav-link" href="./cart.html" target="_blank">
                             <div><i class="fa fa-shopping-cart"></i></div>
                             Cart
                         </a>
