--- a/admin/view/admin.html
+++ b/admin/view/admin.html
@@ -225,7 +225,7 @@
                     </form>
                 </div>
                 <div class="modal-footer">
-                    <button id="btnAdd" type="button" onclick="createProduct()" class="btn btn-warning">Add Phone</button>
+                    <button id="btnAddPhone" type="button" onclick="createProduct()" class="btn btn-warning">Add Phone</button>
                     <button id="btnUpdate" type="button" class="btn btn-primary" style="display: none;" onclick="updateProduct()">Update</button>
                     <button type="button" class="btn btn-dark" aria-label="Close" onclick="resetForm()" data-bs-dismiss="modal">Close</button>
                 </div>
