--- a/customer/view/cart.html
+++ b/customer/view/cart.html
@@ -162,6 +162,6 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     
   <!-- my JS -->
-  <script src="../cart.js"></script>
+  <script type="module" src="../customer.js"></script>
 </body>
 </html>
