--- a/admin/view/admin.html
+++ b/admin/view/admin.html
@@ -59,7 +59,7 @@
                             <div><i class="fa fa-store"></i></div>
                             Store
                         </a>
-                        <a class="nav-link" href="../../cart/view/cart.html">
+                        <a class="nav-link" href="#">
                             <div><i class="fa fa-shopping-cart"></i></div>
                             Cart
                         </a>
@@ -225,8 +225,8 @@
                     </form>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" onclick="createProduct()" class="btn btn-warning">Add Phone</button>
-                    <button type="button" class="btn btn-primary" onclick="updateProduct()">Update</button>
+                    <button id="btnAddPhone" type="button" onclick="createProduct()" class="btn btn-warning">Add Phone</button>
+                    <button id="btnUpdate" type="button" class="btn btn-primary" style="display: none;" onclick="updateProduct()">Update</button>
                     <button type="button" class="btn btn-dark" aria-label="Close" onclick="resetForm()" data-bs-dismiss="modal">Close</button>
                 </div>
             </div>
