--- a/customer/view/customer.html
+++ b/customer/view/customer.html
@@ -21,19 +21,14 @@
           href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700&display=swap"
           rel="stylesheet">
 
-    <!-- Bootstrap CSS -->
-    <!-- <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-      crossorigin="anonymous"
-    /> -->
-
     <!-- Bootstrap CSS v5 -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
 
+    <!-- Bootstrap icon -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.11.1/font/bootstrap-icons.min.css" integrity="sha512-oAvZuuYVzkcTc2dH5z1ZJup5OmSQ000qlfRvuoTTiyTBjwX1faoyearj8KdMq0LgsBTHMrRuMek7s+CxF8yE+w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <!-- css -->
-    <link rel="stylesheet" href="../../css/main.css" />
+    <link rel="stylesheet" href="../../css/main.min.css" />
   </head>
   <body>
 
@@ -59,7 +54,13 @@
                             <div><i class="fa fa-store"></i></div>
                             Admin
                         </a>
-                        <a class="nav-link" href="./cart.html" target="_blank">
+                        <!-- <a class="nav-link">
+                            <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#staticBackdrop" aria-controls="staticBackdrop">
+                                <div><i class="fa fa-shopping-cart"></i></div>
+                                Cart
+                            </button>
+                        </a> -->
+                        <a type="button" class="nav-link" data-bs-toggle="offcanvas" data-bs-target="#staticBackdrop" aria-controls="staticBackdrop">
                             <div><i class="fa fa-shopping-cart"></i></div>
                             Cart
                         </a>
@@ -68,6 +69,7 @@
             </div>
         </nav>
     </header>
+
     <!-- Sort -->
     <div class="container" id="content-wrap">
         <main role="main" class="pb-2">
@@ -89,13 +91,47 @@
           </div>
         </main>
     </div>
-    <!-- middle -->
+
+    <!-- Products List -->
     <section class="middle-1 mb-5">
       <div class="container">
         <div id="listSP" class="row d-flex">
         </div>
       </div>
     </section>
+
+    <!-- Cart -->
+    <div class="shoppingCart offcanvas offcanvas-end" data-bs-backdrop="static" tabindex="-1" id="staticBackdrop"
+        aria-labelledby="staticBackdropLabel" style="width: 40%;">
+    
+        <div class="offcanvas-header">
+            <h1 class="offcanvas-title" id="staticBackdropLabel">Shopping Cart</h1>
+            <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+        </div>
+        <div class="offcanvas-body">
+            <div class="cart_table" id="itemsCart">
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th>Product</th>
+                            <th>Description</th>
+                            <th>Unit Price</th>
+                            <th>Quantity</th>
+                            <th>Amount</th>
+                            <th><i class="fa fa-trash-alt"></i></th>
+                        </tr>
+                    </thead>
+                    <tbody id="listCart"></tbody>
+                </table>
+            </div>
+            <div class="amount">
+                <h4>Amount: $<span id="totalAmount"></span></h4>
+            </div>
+        </div>
+        <div class="offcanvas-footer">
+            <button class="btn btn-success">Payment</button>
+        </div>
+    </div>
     
     <!-- Footer -->
     <footer class="admin_footer">
@@ -189,9 +225,6 @@
     <!-- Bootstrap JS v5 -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
-    <!-- Bootstrap icon -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.11.1/font/bootstrap-icons.min.css" integrity="sha512-oAvZuuYVzkcTc2dH5z1ZJup5OmSQ000qlfRvuoTTiyTBjwX1faoyearj8KdMq0LgsBTHMrRuMek7s+CxF8yE+w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-
     <!-- axios -->
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.27.2/axios.min.js"
@@ -200,6 +233,7 @@
       referrerpolicy="no-referrer"
     ></script>
     
-    <script type="module" src="../customer.js"></script>
+    <!-- My index JS -->
+    <script type="module" src="../index.js"></script>
   </body>
 </html>
