--- a/customer/view/customer.html
+++ b/customer/view/customer.html
@@ -123,14 +123,16 @@
                     </thead>
                     <tbody id="listCart"></tbody>
                 </table>
-            </div>
-            <div class="amount">
-                <h4>Amount: $<span id="totalAmount"></span></h4>
-            </div>
+            </div>        
         </div>
-        <div class="offcanvas-footer">
-            <button class="btn btn-success">Payment</button>
-        </div>
+        <div class="offcanvas-footer row">
+            <div class="amount bg-dark col-6">
+                <h4>Amount: $<span class="text-warning" id="totalAmount"></span></h4>
+            </div>
+            <div class="btnPayment bg-success col-6">
+                <h4>Payment</h4>
+            </div>
+        </div> 
     </div>
     
     <!-- Footer -->
