added feature - clear cart when payment

--- a/customer/view/customer.html
+++ b/customer/view/customer.html
@@ -129,7 +129,7 @@
             <div class="amount bg-dark col-6">
                 <h4>Amount: $<span class="text-warning" id="totalAmount"></span></h4>
             </div>
-            <div class="btnPayment bg-success col-6">
+            <div class="btnPayment bg-success col-6" onclick="handlePayment()">
                 <h4>Payment</h4>
             </div>
         </div> 
