updated admin - fix validation

--- a/admin/view/admin.html
+++ b/admin/view/admin.html
@@ -127,6 +127,19 @@
                 </div>
                 <div class="modal-body">
                     <form role="form" id="myForm">
+
+                        <div class="form-group">
+                            <div class="input-group">
+                                <div class="input-group-prepend">
+                                    <span class="input-group-text"><i class="fa fa-id-badge"></i></span>
+                                </div>
+                                <input type="number" name="idPhone" id="idPhone" class="form-control input-sm"
+                                    placeholder="ID Product">
+                            </div>
+
+                            <span class="sp-thongbao" id="tbIdPhone"></span>
+                        </div>
+
                         <div class="form-group">
                             <div class="input-group">
                                 <div class="input-group-prepend">
